@@ -255,7 +255,7 @@ void KKEditClass::searchAPIDocs(const QString txt,int what)
 				searchcommand=QString("find %1 -iname \"%2*.html\"|sed 's/.html$//'|sort").arg(this->prefsQtDocDir).arg(searchfor);
 				break;
 		}
-qDebug()<<searchcommand;
+//qDebug()<<searchcommand;
 
 	results=this->runPipeAndCapture(searchcommand);
 	if((what==1) && (results.isEmpty()==true))
